--- a/assets/styles/index_style.css
+++ b/assets/styles/index_style.css
@@ -77,6 +77,7 @@ body {
   position: sticky;
   z-index: 1;
   top: 0;
+  left: 0;
 }
 
 /* Logo */
@@ -711,6 +712,7 @@ main {
   margin: 0 auto;
   text-align: center;
   gap: 10px;
+  width: 100%;
 }
 
 .contact__item {
@@ -752,6 +754,7 @@ main {
   font-size: 1rem;
   border-radius: 10px;
   border: 2px solid var(--primary);
+  width: 400px;
 }
 
 .contact__textarea::placeholder {
@@ -775,7 +778,7 @@ main {
 }
 
 #contact__submit {
-  width: 80%;
+  width: 500px;
   height: 40px;
   margin: 10px;
   background: var(--primary);
